# tq_solution

./: .gitmodules  LICENSE  README.md  build_docker_images.sh  build_push_docker_images.sh  build_solution.sh  cleanup.sh  docker-compose-desktop.yml  docker-compose-images.yml  docker-compose-web.yml  docker-compose.yml  push_docker_images.sh  start_desktop_solution.sh  start_docker_compose.sh  start_solution.sh  start_web_solution.sh
.github/workflows/: ci-cd.yml
k8_manifests/: tq-backend-deployment.yaml  tq-backend-service.yaml  tq-frontend-web-deployment.yaml  tq-frontend-web-service.yaml  tq-frontend-web-tcp-service.yaml  tq_network-networkpolicy.yaml
reverse-proxy/: Dockerfile  build_reverse_proxy_docker_image.sh  nginx.conf  push_reverse_proxy_docker_image.sh
tq_sdk/: CMakeLists.txt  README.md  terra_quantum_sdk.cpp  terra_quantum_sdk.h
